[package]
name = "pages-and-pages"
version = "0.4.0"
edition = "2021"
description = "Allows control over a manually allocated region of page-aligned memory with support for granular protection and locking of underlying pages"
repository = "https://github.com/0xfMel/pages-and-pages"
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["page", "memory", "allocation", "protect", "lock"]
categories = ["memory-management"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "^0.2"
